<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="hello">Hello World</string>
    <string name="app_name">Tutorial 1</string>
    <string name="clean">Limpar</string>
    <string name="tel">Telefone</string>
    <string name="nome">Nome</string>
    <string name="ok">OK</string>
    <string name="ver">Ver</string>
    <string name="OKClickHandler">OKClickHandler</string>
    <string name="LimparClickHandler">LimparClickHandler</string>
    <string name="agenda">Agenda</string>
    <string name="AgendaClickHandler">AgendaClickHandler</string>
    <string name="menu_apagar">Apagar Contato</string>
</resources>
