<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/buttonOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:onClick="OKClickHandler"
        android:text="@string/ok" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_weight="0.00"
        android:text="@string/nome" />

    <Button
        android:id="@+id/buttonLimpar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonOK"
        android:layout_alignBottom="@+id/buttonOK"
        android:layout_toRightOf="@+id/buttonOK"
        android:onClick="LimparClickHandler"
        android:text="@string/clean" />

    <EditText
        android:id="@+id/textTelefone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonOK"
        android:layout_alignParentLeft="true"
        android:maxLength="10"
        android:inputType="phone" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textTelefone"
        android:layout_alignParentLeft="true"
        android:text="@string/tel" />

    <EditText
        android:id="@+id/textNome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1" />

    <Button
        android:id="@+id/buttonAgenda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textTelefone"
        android:layout_toRightOf="@+id/buttonLimpar"
        android:onClick="AgendaClickHandler"
        android:text="@string/agenda" />

</RelativeLayout>
